# mfa-TDA

./: .gitignore  CMakeLists.txt  README.md  contour.sh  create-env.sh  critical_point.sh  critical_point_tracking.sh  env.yaml  jacobi_set.sh  load-env.sh  myconfig  ridge_valley_graph.sh
src/: CMakeLists.txt  block.hpp  domain_args.hpp  example-setup.hpp  example_signals.hpp  mfa_extend.h  parser.hpp
src/contour/: CMakeLists.txt  compute_critical_point_jacobi_set.cpp  compute_function_error.cpp  connect_rv_graph.h  contour.cpp  count_betti_num.py  critical_point_jacobi_set.hpp  draw_error.py  find_isocontour.h  find_jacobi_set.h  find_root.h  find_root_jacobi_set.h  find_root_rv_graph.h  find_same_center.h  isocontour.cpp  jacobi_set.cpp  jacobi_set_h_critical_point.h  read_cdf_file.py  ridge_valley_graph.cpp  ridge_valley_graph.h  span_filter.h  trace_in_span.h
src/convert/: CMakeLists.txt  write_h.cpp  write_to_ply.h  write_two_value.cpp  write_vtk.cpp
src/critical_point/: CMakeLists.txt  compute_critical_point.cpp  convert_cpt_to_vtk.cpp  convert_matrix_vector.h  convert_root_to_vtk.cpp  critical_point.hpp  derivative_control_point.cpp  diff_control_point.hpp  find_all_root.h  find_unique_root.h  index_of_critical_point.h  ori_function.h  root_error.cpp  show_2d_dataset_paraview.py  show_3d_dataset_paraview.py  span_filter.hpp  test_time.cpp  unique_root_from_csv.cpp
src/critical_point_tracking/: CMakeLists.txt  CP_Trace.h  RK4.h  critical_point_tracking.cpp  degenerate_case.cpp  degenerate_case.h  degenerate_case_tracing.h  extract_all_critical_points.py  particle_tracing.h  spatial_hashing_spatial_temporal.h  test_data_type.py  time_data_convert.py  tracking_script.py  tracking_utility.h  xy_critical_point_finding.h  xy_critical_point_tracking.h  xy_critical_point_tracking_limit_in_span.h
src/encode/analytical/: CMakeLists.txt  analytical.cpp
src/encode/grid/: CMakeLists.txt  gridded_2d.cpp
src/encode/timeseries/: CMakeLists.txt
src/python/: compute_point.py  create_cube.py  downsample.py  draw_curves.py  extract_block_of_an_obj.py  extract_coast_line.py  extract_contour.py  extract_jacobi_set.py  extract_local.py  extract_mesh.py  extract_points_in_block.py  find_overlap.py  merge_obj_edge_type.py  persistent_diagram.py  plot_cpt.py  plot_cpt_num.py  sample_original_function.py  sample_original_high_dim_func.py  set_z_to_zero.py  ttk_critical_point.py
src/utility/: EigenMatrixIO.h  kdtree.h  parameters.h  save_control_data.hpp  transfer_data.h  utility_function.h
